# Copilot-Game

./: .gitignore  README.md  build.sh  dev.sh  game_overview_rpg.md  lint.sh  test.sh
.github/: DEPLOYMENT_SETUP.md  copilot-instructions.md
.github/instructions/: game.instructions.md  ui.instructions.md  workflows.instructions.md
.github/workflows/: ci.yml  deploy.yml  test.yml
game/: Cargo.toml  clippy.toml  rustfmt.toml
game/src/: game_state.rs  input.rs  lib.rs  main.rs
ui/: .eslintrc.json  .prettierrc  game  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/public/: game.d.ts  game.js  game_bg.wasm  game_bg.wasm.d.ts  wasm-loader.js
ui/src/: App.fullscreen.test.tsx  App.mobile.test.tsx  App.test.tsx  App.tsx  index.css  test-setup.ts  utils.test.ts
ui/src/components/: ErrorToast.tsx  GameScreens.css  GameScreens.tsx  GameTypes.tsx  GameUI.css  GameUI.tsx  MobileControls.css  MobileControls.test.tsx  MobileControls.tsx  TestUI.css
ui/src/types/: global.d.ts
ui/src/utils/: error-logger.ts
